# Food-Image-Recognition

./: .env.sample  .gitignore  Food_Image_Recognition.ipynb  README.md  food_names.csv  kafka-producer.py  main.py  pyproject.toml  requirements.txt
app/: config.py  kafka_client.py  logger.py  minio_client.py  processor.py
models/: extract_gradient.py  food_image_models.py  food_text_models.py
models/results/: hamburger.json
utils/: async_helper.py
